<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewmodel"
            type="com.example.shopingapp.ui.shipping.ShippingViewModel" />
        <variable
            name="listner"
            type="com.example.shopingapp.ui.shipping.ShippingFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/bg_gray_unselect_qc_cart"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="Shipping Details"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20ssp"
                    tools:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="start"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/shipping"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_22ssp"
                    tools:visibility="visible" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/edit_style_qc"
                    android:hint="Describe the shipping requirements"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_25sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp"
                    tools:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/bg_border_for_new_add"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp"
                    tools:visibility="visible">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:orientation="horizontal"
                        tools:visibility="visible">

                        <RadioButton
                            android:id="@+id/rboldAdd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:text="Nishar Lakhani"
                            android:textColor="@color/titleColor"
                            android:textSize="@dimen/_15ssp"
                            android:textStyle="bold" />
                    </RadioGroup>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_2sdp"
                        android:text="A 101, Block D, Juhapura, Ahmedabadf"
                        android:textColor="@color/titleColor"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/bg_border_for_new_add"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp"
                    tools:visibility="visible">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:orientation="horizontal"
                        tools:visibility="visible">

                        <RadioButton
                            android:id="@+id/rbnewAdd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/new_address"
                            android:textColor="@color/titleColor"
                            android:textSize="@dimen/_15ssp" />
                    </RadioGroup>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_2sdp"
                        android:text="@string/first_name"
                        android:textColor="@color/titleColor"
                        android:textSize="@dimen/_14ssp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@drawable/edit_style_qc"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_2sdp"
                        android:text="@string/last_name"
                        android:textColor="@color/titleColor"
                        android:textSize="@dimen/_14ssp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@drawable/edit_style_qc"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_2sdp"
                        android:text="Contact Number"
                        android:textColor="@color/titleColor"
                        android:textSize="@dimen/_14ssp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@drawable/edit_style_qc"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_2sdp"
                        android:text="Address 1"
                        android:textColor="@color/titleColor"
                        android:textSize="@dimen/_14ssp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@drawable/edit_style_qc"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_2sdp"
                        android:text="Address 2"
                        android:textColor="@color/titleColor"
                        android:textSize="@dimen/_14ssp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@drawable/edit_style_qc"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:padding="@dimen/_2sdp"
                            android:text="City"
                            android:textColor="@color/titleColor"
                            android:textSize="@dimen/_14ssp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:padding="@dimen/_2sdp"
                            android:text="Zipcode"
                            android:textColor="@color/titleColor"
                            android:textSize="@dimen/_14ssp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1">

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:layout_weight="0.5"
                            android:background="@drawable/edit_style_qc"
                            android:gravity="start"
                            android:paddingLeft="@dimen/_10sdp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_11ssp" />

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:layout_weight="0.5"
                            android:background="@drawable/edit_style_qc"
                            android:gravity="start"
                            android:inputType="number"
                            android:paddingLeft="@dimen/_10sdp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_11ssp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_2sdp"
                        android:text="Country"
                        android:textColor="@color/titleColor"
                        android:textSize="@dimen/_14ssp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@drawable/edit_style_qc"
                        android:hint="Country"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:background="@drawable/bg_gray_unselect_qc_cart"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/save_inquiery"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20ssp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="start"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/notes"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20ssp"
                    tools:visibility="visible" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@drawable/edit_style_qc"
                    android:gravity="start"
                    android:hint="Enter notes"
                    android:paddingTop="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp"
                    tools:visibility="visible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/bg_gray_unselect_qc_cart"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20ssp"
                    android:onClickListener="@{()-> listner.makePayment()}"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </RelativeLayout>


    </ScrollView>


</layout>